--- a/src/gallery.css
+++ b/src/gallery.css
@@ -1,3 +1,29 @@
+.polina {
+    background: black
+}
+
+.qsc {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: whitesmoke
+}
+
+.poi {
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    color: #f2f2f2
+}
+
+button {
+    background: rgb(202, 172, 230);
+}
+
+.madonna {
+    color: #f2f2f2
+}
+
 * {
     box-sizing: border-box
 }
@@ -20,7 +46,7 @@
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: black;
+    color: white;
     font-weight: bold;
     font-size: 18px;
     transition: 0.6s ease;
@@ -95,27 +121,4 @@
     to {
         opacity: 1
     }
-}
-
-.qaz {
-    padding-bottom: 50px;
-}
-
-.footer {
-    display: grid;
-    align-items: center;
-    justify-content: center;
-    color: whitesmoke;
-}
-
-.cvet {
-    background-color: black
-}
-
-.qwerty {
-    color: aliceblue;
-}
-
-button {
-    background: rgb(202, 172, 230);
 }
